# mipiti-verify

./: .gitignore  CHANGELOG.md  README.md  action.yml  entrypoint.sh  pyproject.toml  requirements-audit.in  requirements-build.in
.github/workflows/: ci-docs-only.yml  ci.yml  doc-counts.yml  mipiti-verify.yml
formal/: COMPOSITION.md  KeySourceResolver.cfg  KeySourceResolver.tla  audit-README.md  audit.tla  audit_bundle_bind.cfg  audit_main_cdsse.cfg  audit_main_model_only.cfg  audit_main_orphan_legacy.cfg  audit_main_orphan_results_allowed.cfg  audit_main_orphan_results_blocked.cfg  audit_main_platform.cfg  audit_main_sigstore.cfg  audit_main_sufficiency.cfg  audit_main_workspace.cfg  audit_manifest.tla  audit_manifest_platform.cfg  audit_manifest_workspace.cfg  check_audit_partition_total.py  check_audit_view_faithful.py
scripts/: canonical-counts.sh  check-doc-counts.sh
src/mipiti_verify/: cli.py  runner.py  tier2.py  workspace_key_signer.py
src/mipiti_verify/templates/: tier2_class_exists.j2  tier2_config_key_exists.j2  tier2_config_value_matches.j2  tier2_decorator_present.j2  tier2_dependency_exists.j2  tier2_dependency_version.j2  tier2_env_var_referenced.j2  tier2_error_handled.j2  tier2_file_exists.j2  tier2_file_hash.j2  tier2_function_calls.j2  tier2_function_exists.j2  tier2_http_header_set.j2  tier2_import_present.j2  tier2_middleware_registered.j2  tier2_no_plaintext_secret.j2  tier2_parameter_validated.j2  tier2_pattern_absent.j2  tier2_pattern_matches.j2  tier2_test_exists.j2  tier2_test_passes.j2
tests/: test_cli.py  test_runner.py  test_runner_assumptions.py  test_runner_strict_repo.py  test_spec_invariants.py  test_tier2.py  test_tier2_fail_closed_on_empty_source.py  test_tier2_no_empty_boundary_wrap.py  test_tier2_pattern_source_loading.py  test_tier2_template_fail_closed_clause.py  test_workspace_key_signer.py
