[project]
name = "mipiti-verify"
version = "0.44.0"
description = "Turnkey CI verification for Mipiti threat model assertions"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.10"
authors = [{name = "Mipiti", email = "support@mipiti.io"}]
keywords = ["security", "verification", "threat-modeling", "ci", "mipiti"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "certifi>=2024.7.4",
    "click>=8",
    "google-re2>=1.1",
    "httpx>=0.27",
    "rich>=13",
    "sigstore>=4.2,<5",
    "truststore>=0.10",
]

[project.urls]
Homepage = "https://mipiti.io"
Documentation = "https://mipiti.io/docs#evidence-verification"
Repository = "https://github.com/Mipiti/mipiti-verify"
Issues = "https://github.com/Mipiti/mipiti-verify/issues"

[project.scripts]
mipiti-verify = "mipiti_verify.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mipiti_verify"]

[project.optional-dependencies]
openai = ["openai>=1"]
anthropic = ["anthropic>=0.40"]
all = ["mipiti-verify[openai,anthropic]"]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "respx>=0.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Transitive CVE floors (pinned at compile time only — uv's
# constraint-dependencies don't ship in the published wheel's metadata,
# they just force the lockfile resolution). Refresh the four lockfiles
# (requirements.lock, requirements-all.lock, requirements-build.lock,
# and re-run pip-audit) when bumping these.
[tool.uv]
constraint-dependencies = [
    "idna>=3.15",      # CVE-2026-45409 (idna<3.15 vulnerable; transitive via httpx / sigstore / requests)
    "urllib3>=2.7.0",  # CVE-2026-44431 + CVE-2026-44432 (urllib3<2.7.0 vulnerable; transitive via requests)
]
